Fix color on mobile

--- a/mobile/css/commun.css
+++ b/mobile/css/commun.css
@@ -27,7 +27,7 @@ body{
 
 .eqLogic-widget{
     display: inline-block;
-    background-color: #929292;
+    background-color: #2496d4;
     color : white;
     vertical-align: top;
     padding : 3px;
